# DeepSeek-OC2-Server-Minimal

./: README.md  install.sh  pyproject.toml  server.py  start.sh
